--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-html, body { height: 100vh; width: 100vw; }
+html, body { height: 100vh; width: 100vw; position: relative; }
 body { height: 100vh; width: 100vw; margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
